# landscape-server-operator

./: CONTRIBUTING.md  Makefile  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml
.github/: .copilot-collections.yaml
.github/workflows/: lint.yaml  unit-test.yaml
bundle-examples/: bundle.yaml  legacy-db.bundle.yaml  legacy.bundle.yaml  pgbouncer.bundle.yaml  postgres14.bundle.yaml  postgres16.bundle.yaml
bundle-examples/internal-haproxy/: .gitignore  internal-haproxy.bundle.yaml  main.tf  outputs.tf  variables.tf  versions.tf
bundle-examples/lbaas/: lbaas.bundle.yaml  main.tf  variables.tf
src/: charm.py  config.py  haproxy.cfg.j2  haproxy.py  settings_files.py
terraform/charm/: README.md  outputs.tf
terraform/charm/tests/: outputs.tftest.hcl
terraform/product/modules/landscape-scalable/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/product/modules/landscape-scalable/tests/: defaults.tftest.hcl  integrations.tftest.hcl  outputs.tftest.hcl
tests/integration/: conftest.py  helpers.py  test_bundle.py
tests/unit/: conftest.py  test_charm.py  test_config.py  test_haproxy.py  test_haproxy_route.py  test_ingress.py  test_settings_files.py  test_tls_certificates.py  test_ubuntu_installer_attach.py
