[project]
name = "landscape-server-charm"
version = "0.1.0"
description = "Juju charm for deploying and managing Landscape Server"
requires-python = ">=3.10"
dependencies = ["cosl==1.4.0", "ops==2.23.1", "pydantic==2.9.2"]

[dependency-groups]
dev = [
  "charmcraftcache==0.8.0",
  "coverage==7.13.1",
  "grpcio==1.78.0",
  "ops[testing]==2.23.1",
  "pytest==9.0.3",
  "ruff==0.15.7",
  "urllib3==2.6.3",
]
integration = [
  "grpcio==1.78.0",
  "jubilant==1.6.2",
  "requests==2.33.0",
  "urllib3==2.6.3",
]

[tool.ruff]
line-length = 88
target-version = "py310"
# Skip vendored dependencies
extend-exclude = ["lib"]

[tool.ruff.lint]
select = [
  # pycodestyle errors
  "E",
  # pycodestyle warnings
  "W",
  # Pyflakes
  "F",
  # isort
  "I",
]
# Recommended ignored rules based on https://docs.astral.sh/ruff/formatter/
ignore = [
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "Q004",
  "COM812",
  "COM819",
  "ISC002",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
order-by-type = false
case-sensitive = false

[tool.pytest.ini_options]
filterwarnings = ["once:.*Harness is deprecated.*:PendingDeprecationWarning"]
pythonpath = [".", "lib", "src"]
testpaths = ["tests"]
